-
Bug
-
Resolution: Done
-
P4: Low
-
None
-
5.3.1
-
None
-
Linux 3.13.0-24-generic
In method EnginioPlugin::initializeEngine(QQmlEngine *engine, const char *uri); Warning message reads >> "Enginio client failed to install QQmlNetworkAccessManagerFactory on QML engine because a differnt factory is already attached, It is recomanded to use QNetworkAccessManager delivered by Enginio". Correct spelling of recomanded is recommended.