Fix some typos in a warning message

Task-number: QTBUG-41287
Change-Id: Iece8f78687b412e23418adbd37b1190b8183addb
Reviewed-by: Mitch Curtis <mitch.curtis@digia.com>